<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Long Long Ago</string>

    <string name="label_settings">Settings</string>

    <string name="msg_welcome_message">Welcome to Long Long Ago!</string>

    <string name="label_channel_name_hint">Channel name</string>

    <string name="label_encryption_key_hint">Encryption key</string>

    <string name="label_create_room">Create room</string>

    <string name="label_join_room">Join room</string>

    <string name="label_confirm">Confirm</string>

    <string name="label_send">Send</string>

    <string name="msg_say_something">Say something…</string>

    <string name="msg_no_network_connection">No network connection, please check the network settings</string>

    <string name="label_title_resolution">Resolution\n(Width * Height)</string>
    <string name="label_title_frame_rate">Frame Rate\n(fps)</string>
    <string name="label_title_bit_rate">Bit Rate\n(kbps)</string>

    <!--activity_login-->
    <string name="login_label_username">Username</string>
    <string name="login_username_hint">Please input your username</string>
    <string name="no_username">Please input your username</string>

    <string name="login_label_password">Password</string>
    <string name="login_password_hint">Please input your password</string>
    <string name="no_password">Please input your password</string>

    <string name="login_label_password_reinput">Confirm password</string>
    <string name="login_password_reinput_hint">Please input your password again</string>

    <string name="login_label_mail">Email</string>
    <string name="login_mail_hint">Please input your email address</string>

    <string name="login_label_sex">Sex</string>
    <string name="login_sex_hint">Please select your gender</string>

    <string name="login_label_phone">Phone number</string>
    <string name="login_phone_hint">Please input your phone number</string>

    <string name="login_label_signin">Sign in</string>
    <string name="login_label_register">Register</string>
    <string name="login_label_cancel">cancel</string>
    <string name="login_label_noAccount">No account yet? Create one</string>
    <string name="login_label_hasAccount">Already have an account? Sign in</string>
    <string name="login_failed">Can not sign in</string>
    <string name="no_response_from_server">No response from server</string>
    <string name="no_active_room">Currently no available room</string>
    <string name="room_occupied">Occupied room</string>
    <string name="join_room_unsuccessfully">Cannot join current room</string>
    <string name="create_room_successfully">Create room successfully</string>
    <string name="create_room_unsuccessfully">Cannot create room</string>

    <string name="upload_avator_successfully">Upload avator successfully</string>
    <string name="upload_avator_unsuccessfully">Cannot uploadUpload avator</string>
    <string name="default_signature">monotonous good-lookings, funny souls</string>
    <string name="default_room_name">Indifference makes the heart intenser</string>

    <string name="male">male</string>
    <string name="female">female</string>

    <string name="app_icon">App icon</string>

    // DO NOT TRANSLATE
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="label_join">Join room</string>
</resources>
