<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/colorPrimary"
	android:fillViewport="true"
	android:fitsSystemWindows="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_centerInParent="true"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:paddingLeft="24dp"
		android:paddingRight="24dp"
		android:paddingTop="56dp">

		<com.longlongago.resideMenu.model.CircleAvatar
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="24dp"
			android:contentDescription="@string/app_icon"
			android:src="@drawable/ic_launcher" />

		<!--  Name Label -->
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp">

			<EditText
				android:id="@+id/input_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/login_label_username"
				android:inputType="textCapWords"
				android:textSize="16sp"
				android:textColor="@color/cardview_light_background"
				android:textColorHint="@color/blue_light"
				android:textColorLink="@color/cardview_light_background" />
		</android.support.design.widget.TextInputLayout>

		<!-- Email Label -->

		<!-- Password Label -->
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp">

			<EditText
				android:id="@+id/input_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/login_label_password"
				android:inputType="textPassword"
				android:textSize="16sp"
				android:textColor="@color/cardview_light_background"
				android:textColorHint="@color/blue_light"
				android:textColorLink="@color/cardview_light_background" />
		</android.support.design.widget.TextInputLayout>

		<!-- sex -->

		<RadioGroup
			android:id="@+id/radiogroup_sex"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/radiobutton_male"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/male"
				android:textColor="@color/cardview_light_background"
				android:textColorLink="@color/blue_light" />

			<RadioButton
				android:id="@+id/radiobutton_female"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/female"
				android:textColor="@color/cardview_light_background"
				android:textColorLink="@color/blue_light" />
		</RadioGroup>

		<!-- Signup Button -->
		<android.support.v7.widget.AppCompatButton
			android:id="@+id/register_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:layout_marginTop="24dp"
			android:background="@drawable/button_selector"
			android:padding="12dp"
			android:text="@string/login_label_register"
			android:textColor="@android:color/white"
			android:textSize="17sp" />

		<TextView
			android:id="@+id/login_link"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:gravity="center"
			android:text="@string/login_label_hasAccount"
			android:textColor="@color/cardview_light_background"
			android:textColorLink="@color/cardview_light_background"
			android:textSize="16sp" />

	</LinearLayout>
</ScrollView>